[gd_scene load_steps=7 format=2]

[ext_resource path="res://Coin.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Field.tscn" type="PackedScene" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 549.0
margin_bottom = 552.0
color = Color( 0.0666667, 0.384314, 0.4, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 203.633, 310.087 )

[node name="Coin" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 339.607, 189.304 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Field" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Enemy" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="player_hit" from="Player" to="." method="_on_Player_player_hit"]
[connection signal="coin_collected" from="Coin" to="." method="_on_Coin_coin_collected"]
[connection signal="start" from="HUD" to="." method="_on_HUD_start"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
